# allocant

./: .gitignore  GNUmakefile  alembic.ini  main.py  models.py  pyproject.toml
FuckMariaDB/: __init__.py  __main__.py  db.py  login.py  models.py  settings.py  templates.py  test_settings.py
FuckMariaDB/api/: __init__.py  deps.py  products.py  squid_rules.py
FuckMariaDB/html/: __init__.py  products.py
FuckMariaDB/static/: index.html  login.html  view-transitions.css
FuckMariaDB/templates/: read_products.html.j2
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_import.py  0002_common_name_not_family_name_given_name.py  72e5802cb189_.py
allocant/: __init__.py  tmp.py
fuck_mysql/: README.rst  __init__.py  model.py  sloppy_slurp.py
fuck_mysql/old/: alloc-schema-mariadb.sql  alloc-schema-sqlite3.sql  prisonpc_model.py  sloppy-sqlite3-migration.py  test.py  test.sql
fuck_mysql/templates/: index.html  layout.html
fuck_mysql/templates/product/: list.html
