# https://docs.astral.sh/ruff/settings/#pycodestyle-max-line-length
# https://docs.astral.sh/ruff/settings/#line-length
# FIXME: as at November 2023,
#        Debian sid has ruff 0.0.291, which
#        supports line-length but not max-line-length.
#        Trying to set the latter makes ruff crash.
[tool.ruff]
line-length = 131
[project]
name = "FuckMariaDB"
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = [
    "uvicorn >= 0.17.6",
    "fastapi >= 0.92.0",
]
