# https://docs.astral.sh/ruff/settings/#pycodestyle-max-line-length
# https://docs.astral.sh/ruff/settings/#line-length
# FIXME: as at November 2023,
#        Debian sid has ruff 0.0.291, which
#        supports line-length but not max-line-length.
#        Trying to set the latter makes ruff crash.
[tool.ruff]
line-length = 131
[project]
name = "FuckMariaDB"
version = "0"
description = "FIXME: using dynamic=[anything] causes flit build to import models.py twice, triggering this error: sqlalchemy.exc.InvalidRequestError: Table 'product' is already defined for this MetaData instance."
requires-python = ">=3.11"
dependencies = [
    "uvicorn >= 0.17.6",
    "fastapi >= 0.92.0",
    "pydantic >= 1.10.4",
    "sqlmodel >= 0.0.8",
]
